--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~
   ~  MIT License
   ~
@@ -22,10 +23,9 @@
   ~  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   ~  SOFTWARE.
   ~
-  -->
-
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tmall.ultraviewpager.sample">
+          package="com.tmall.ultraviewpager.sample">
 
     <application android:label="@string/app_name">
         <activity
@@ -34,15 +34,17 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Light">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="com.tmall.ultraviewpager" />
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="com.tmall.ultraviewpager"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".PagerActivity"
-            android:theme="@android:style/Theme.Holo.Light" />
+            android:theme="@android:style/Theme.Holo.Light"/>
+        <activity android:name=".ViewPagerActivity">
+        </activity>
     </application>
 
 </manifest>
